--- a/ex01/src/index.html
+++ b/ex01/src/index.html
@@ -21,153 +21,54 @@
       </div>
       <div class="key-container">
         <div class="first">
-          <button type="button" value="1" onclick="clicked(this.value)">
-            1
-          </button>
-          <button type="button" value="2" onclick="clicked(this.value)">
-            2
-          </button>
-          <button type="button" value="3" onclick="clicked(this.value)">
-            3
-          </button>
-          <button type="button" value="4" onclick="clicked(this.value)">
-            4
-          </button>
-          <button type="button" value="5" onclick="clicked(this.value)">
-            5
-          </button>
-          <button type="button" value="6" onclick="clicked(this.value)">
-            6
-          </button>
-          <button type="button" value="7" onclick="clicked(this.value)">
-            7
-          </button>
-          <button type="button" value="8" onclick="clicked(this.value)">
-            8
-          </button>
-          <button type="button" value="9" onclick="clicked(this.value)">
-            9
-          </button>
-          <button type="button" value="0" onclick="clicked(this.value)">
-            0
-          </button>
-          <button
-            type="button"
-            value="back-space"
-            class="back-space"
-            onclick="backSpace()"
-          >
-            Back Space
-          </button>
-          <button type="button" value="q" onclick="clicked(this.value)">
-            q
-          </button>
-          <button type="button" value="w" onclick="clicked(this.value)">
-            w
-          </button>
-          <button type="button" value="e" onclick="clicked(this.value)">
-            e
-          </button>
-          <button type="button" value="r" onclick="clicked(this.value)">
-            r
-          </button>
-          <button type="button" value="t" onclick="clicked(this.value)">
-            t
-          </button>
-          <button type="button" value="y" onclick="clicked(this.value)">
-            y
-          </button>
-          <button type="button" value="u" onclick="clicked(this.value)">
-            u
-          </button>
-          <button type="button" value="i" onclick="clicked(this.value)">
-            i
-          </button>
-          <button type="button" value="o" onclick="clicked(this.value)">
-            o
-          </button>
-          <button type="button" value="p" onclick="clicked(this.value)">
-            p
-          </button>
+          <button type="button" value="1" onclick="clicked(this.value)">1</button>
+          <button type="button" value="2" onclick="clicked(this.value)">2</button>
+          <button type="button" value="3" onclick="clicked(this.value)">3</button>
+          <button type="button" value="4" onclick="clicked(this.value)">4</button>
+          <button type="button" value="5" onclick="clicked(this.value)">5</button>
+          <button type="button" value="6" onclick="clicked(this.value)">6</button>
+          <button type="button" value="7" onclick="clicked(this.value)">7</button>
+          <button type="button" value="8" onclick="clicked(this.value)">8</button>
+          <button type="button" value="9" onclick="clicked(this.value)">9</button>
+          <button type="button" value="0" onclick="clicked(this.value)">0</button>
+          <button type="button" value="back-space" class="back-space" onclick="backSpace()">Back Space</button>
+          <button type="button" value="q" onclick="clicked(this.value)">q</button>
+          <button type="button" value="w" onclick="clicked(this.value)">w</button>
+          <button type="button" value="e" onclick="clicked(this.value)">e</button>
+          <button type="button" value="r" onclick="clicked(this.value)">r</button>
+          <button type="button" value="t" onclick="clicked(this.value)">t</button>
+          <button type="button" value="y" onclick="clicked(this.value)">y</button>
+          <button type="button" value="u" onclick="clicked(this.value)">u</button>
+          <button type="button" value="i" onclick="clicked(this.value)">i</button>
+          <button type="button" value="o" onclick="clicked(this.value)">o</button>
+          <button type="button" value="p" onclick="clicked(this.value)">p</button>
         </div>
         <div class="second">
-          <button type="button" value="a" onclick="clicked(this.value)">
-            a
-          </button>
-          <button type="button" value="s" onclick="clicked(this.value)">
-            s
-          </button>
-          <button type="button" value="d" onclick="clicked(this.value)">
-            d
-          </button>
-          <button type="button" value="f" onclick="clicked(this.value)">
-            f
-          </button>
-          <button type="button" value="g" onclick="clicked(this.value)">
-            g
-          </button>
-          <button type="button" value="h" onclick="clicked(this.value)">
-            h
-          </button>
-          <button type="button" value="j" onclick="clicked(this.value)">
-            j
-          </button>
-          <button type="button" value="k" onclick="clicked(this.value)">
-            k
-          </button>
-          <button type="button" value="l" onclick="clicked(this.value)">
-            l
-          </button>
-          <button
-            type="button"
-            value="caps-lock"
-            class="caps-lock"
-            onclick="smallOrLarge()"
-          >
-            Caps Lock
-          </button>
-          <button type="button" value="ok" class="ok" onclick="alertIt()">
-            OK
-          </button>
-          <button type="button" value="z" onclick="clicked(this.value)">
-            z
-          </button>
-          <button type="button" value="x" onclick="clicked(this.value)">
-            x
-          </button>
-          <button type="button" value="c" onclick="clicked(this.value)">
-            c
-          </button>
-          <button type="button" value="v" onclick="clicked(this.value)">
-            v
-          </button>
-          <button type="button" value="b" onclick="clicked(this.value)">
-            b
-          </button>
-          <button type="button" value="n" onclick="clicked(this.value)">
-            n
-          </button>
-          <button type="button" value="m" onclick="clicked(this.value)">
-            m
-          </button>
+          <button type="button" value="a" onclick="clicked(this.value)">a</button>
+          <button type="button" value="s" onclick="clicked(this.value)">s</button>
+          <button type="button" value="d" onclick="clicked(this.value)">d</button>
+          <button type="button" value="f" onclick="clicked(this.value)">f</button>
+          <button type="button" value="g" onclick="clicked(this.value)">g</button>
+          <button type="button" value="h" onclick="clicked(this.value)">h</button>
+          <button type="button" value="j" onclick="clicked(this.value)">j</button>
+          <button type="button" value="k" onclick="clicked(this.value)">k</button>
+          <button type="button" value="l" onclick="clicked(this.value)">l</button>
+          <button type="button" class="caps-lock" onclick="smallOrLarge()">Caps Lock</button>
+          <button type="button" value="ok" class="ok" onclick="alertIt()">OK</button>
+          <button type="button" value="z" onclick="clicked(this.value)">z</button>
+          <button type="button" value="x" onclick="clicked(this.value)">x</button>
+          <button type="button" value="c" onclick="clicked(this.value)">c</button>
+          <button type="button" value="v" onclick="clicked(this.value)">v</button>
+          <button type="button" value="b" onclick="clicked(this.value)">b</button>
+          <button type="button" value="n" onclick="clicked(this.value)">n</button>
+          <button type="button" value="m" onclick="clicked(this.value)">m</button>
           <button type="button" value="-" onclick="addDash()">-</button>
           <button type="button" value="_" onclick="addUnderScore()">_</button>
-          <button type="button" value="shift" class="shift" onclick="oneBig()">
-            Shift
-          </button>
+          <button type="button" class="shift" onclick="oneBig()">Shift</button>
         </div>
         <div class="space_enter">
-          <button
-            type="button"
-            value=" "
-            class="space"
-            onclick="clicked(this.value)"
-          >
-            Space
-          </button>
-          <button type="button" value="enter" class="enter" onclick="newRow()">
-            Enter
-          </button>
+          <button type="button" value=" " class="space" onclick="clicked(this.value)">Space</button>
+          <button type="button" class="enter" onclick="newRow()">Enter</button>
         </div>
       </div>
     </div>
